--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "css-loader",
   "version": "0.28.7",
-  "author": "Tobias Koppers @sokra",
+  "author": "Tobias Koppers (@sokra)",
   "description": "css loader module for webpack",
+  "license": "MIT",
+  "main": "dist/cjs.js",
+  "engines": {
+    "node": ">= 6.9.0 || >= 8.9.0"
+  },
   "files": [
-    "index.js",
-    "locals.js",
-    "lib"
+    "dist"
   ],
   "scripts": {
     "test": "mocha",
@@ -18,38 +21,62 @@
     "release": "yarn run standard-version"
   },
   "dependencies": {
-    "babel-code-frame": "^6.11.0",
-    "css-selector-tokenizer": "^0.7.0",
-    "cssnano": ">=2.6.1 <4",
-    "icss-utils": "^2.1.0",
-    "loader-utils": "^1.0.2",
-    "lodash.camelcase": "^4.3.0",
-    "object-assign": "^4.0.1",
-    "postcss": "^5.0.6",
-    "postcss-modules-extract-imports": "^1.0.0",
-    "postcss-modules-local-by-default": "^1.0.1",
-    "postcss-modules-scope": "^1.0.0",
-    "postcss-modules-values": "^1.1.0",
-    "postcss-value-parser": "^3.3.0",
-    "source-list-map": "^2.0.0"
+    "loader-utils": "^1.0.0",
+    "postcss": "^6.0.0",
+    "postcss-value-parser": "^3.0.0",
+    "schema-utils": "^0.3.0"
   },
   "devDependencies": {
-    "codecov": "^1.0.1",
-    "eslint": "3.14.0",
-    "istanbul": "^0.4.5",
-    "mocha": "^3.2.0",
-    "should": "^11.1.2",
-    "standard-version": "^4.0.0"
+    "babel-cli": "^6.0.0",
+    "babel-jest": "^21.0.0",
+    "babel-plugin-transform-object-rest-spread": "^6.0.0",
+    "babel-polyfill": "^6.0.0",
+    "babel-preset-env": "^1.0.0",
+    "cross-env": "^5.0.0",
+    "del": "^3.0.0",
+    "del-cli": "^1.0.0",
+    "eslint": "4.0.0",
+    "eslint-config-webpack": "^1.0.0",
+    "eslint-plugin-import": "^2.0.0",
+    "jest": "^21.0.0",
+    "lint-staged": "^3.4.0",
+    "memory-fs": "^0.4.1",
+    "nsp": "^2.6.3",
+    "pre-commit": "^1.2.2",
+    "standard-version": "^4.0.0",
+    "webpack": "^3.0.0",
+    "webpack-defaults": "^1.6.0"
   },
   "peerDependencies": {
     "webpack": "^3.0.0 || ^4.0.0-alpha.0 || ^4.0.0"
   },
-  "engines": {
-    "node": ">= 6.9.0 || >= 8.9.0"
+  "scripts": {
+    "start": "npm run build -- -w",
+    "build": "cross-env NODE_ENV=production babel src -d dist --ignore 'src/**/*.test.js' --copy-files",
+    "clean": "del-cli dist",
+    "lint": "eslint --cache src test",
+    "lint-staged": "lint-staged",
+    "prebuild": "npm run clean",
+    "prepublish": "npm run build",
+    "security": "nsp check",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --collectCoverageFrom='src/**/*.js' --coverage",
+    "travis:lint": "npm run lint && npm run security",
+    "travis:test": "npm run test -- --runInBand",
+    "travis:coverage": "npm run test:coverage -- --runInBand",
+    "appveyor:test": "npm run test",
+    "webpack-defaults": "webpack-defaults",
+    "release": "standard-version"
   },
-  "repository": {
-    "type": "git",
-    "url": "git@github.com:webpack/css-loader.git"
-  },
-  "license": "MIT"
+  "repository": "https://github.com/webpack-contrib/css-loader.git",
+  "bugs": "https://github.com/webpack/css-loader/issues",
+  "homepage": "https://webpack.js.org/loaders/css-loader",
+  "pre-commit": "lint-staged",
+  "lint-staged": {
+    "*.js": [
+      "eslint --fix",
+      "git add"
+    ]
+  }
 }
